# python_genai_practice

./: .env  .gitignore  main.py  pyproject.toml
00_python_basic/: async_tasks.py  concurrency.py  decorator.py  generator.py  mro.py  oop.py  paralalizm.py
01_pydantic/: main.py
02_tokenization/: main.py
03_hello_ai/: main.py
04_fastapi_genai/: agent.py  main.py  olama.py
05_rag/: docker-compose.yaml  index.py  main.py
06_langraph_agent/: main.py
